# electronic_shop

./: README.md  pyproject.toml
features/: Error_instantiate.py  InstantiateCSVError.py  Item.py
tests/: test.csv  test_1.py  test_keyboard.py  test_phone.py
