[tool.poetry]
name = "electronic-shop"
version = "0.1.0"
description = ""
authors = ["Pulsatill <arch-angel2002@yandex.ru>"]
readme = "README.md"
packages = [{include = "electronic_shop"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
coverage = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
